fix: dropdown readability
fix: homepage text and image move sync

--- a/src/app/components/contacts-dropdown/contacts-dropdown.component.scss
+++ b/src/app/components/contacts-dropdown/contacts-dropdown.component.scss
@@ -23,8 +23,9 @@
   color: white;
   font-family: $krona;
   // padding: 16px;
+  background: rgba(16, 20, 40, 0.8);
+
   font-size: 14px;
-  background-color: transparent;
   border-radius: 20px;
   display: block;
   min-width: 160px;
@@ -50,6 +51,7 @@
   border-left: 2px solid $accent;
   border-bottom: 2px solid $accent;
   border-right: 2px solid $accent;
+  background: rgba(16, 20, 40, 0.8);
 }
 
 /* Links inside the dropdown */
